[gd_scene load_steps=2 format=3 uid="uid://drift_hud"]

[ext_resource type="Script" path="res://src/UI/HUD.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")
layer = 100

[node name="HealthBarContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
offset_left = 20.0
offset_top = -80.0
offset_right = 220.0
offset_bottom = -20.0
mouse_filter = 2

[node name="HealthBarBackground" type="ColorRect" parent="HealthBarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.15, 0.9)

[node name="HealthBarFill" type="ColorRect" parent="HealthBarContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 4.0
offset_bottom = 26.0
grow_horizontal = 2
color = Color(0.2, 0.8, 0.3, 1.0)

[node name="HealthLabel" type="Label" parent="HealthBarContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.95, 0.95, 0.95, 1)
theme_override_font_sizes/font_size = 16
text = "HP: 100 / 100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DriftContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 100.0
mouse_filter = 2

[node name="DriftNumberLabel" type="Label" parent="DriftContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 0.4
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1.0, 1)
theme_override_font_sizes/font_size = 20
text = "Drift #1"
horizontal_alignment = 2
vertical_alignment = 1

[node name="DriftRemainingLabel" type="Label" parent="DriftContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "Remaining: 10"
horizontal_alignment = 2
vertical_alignment = 1

[node name="TimerContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
offset_top = 20.0
offset_right = -100.0
offset_bottom = 80.0
mouse_filter = 2

[node name="ElapsedTimeLabel" type="Label" parent="TimerContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 0.4
offset_right = 0.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.9, 0.8, 1)
theme_override_font_sizes/font_size = 16
text = "Elapsed: 00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RemainingTimeLabel" type="Label" parent="TimerContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 30.0
offset_right = 0.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "Left: 60:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClassEquipmentContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
offset_left = 20.0
offset_top = -130.0
offset_right = 300.0
offset_bottom = -90.0
mouse_filter = 2

[node name="ClassLabel" type="Label" parent="ClassEquipmentContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 0.45
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 1)
theme_override_font_sizes/font_size = 18
text = "Warrior"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EquipmentLabel" type="Label" parent="ClassEquipmentContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.85, 1)
theme_override_font_sizes/font_size = 14
text = "Iron Sword (+15 DMG)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaterialIndicator" type="ColorRect" parent="ClassEquipmentContainer"]
layout_mode = 1
anchors_preset = 9
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_right = 0.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.75, 0.75, 0.78, 1)

[node name="ThemeContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
mouse_filter = 2

[node name="ThemeLabel" type="Label" parent="ThemeContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "Prime World"
horizontal_alignment = 1
vertical_alignment = 1
